--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -24,7 +24,10 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to 'Profile', edit_user_registration_path %></li>
+          <li class="<%= active?(edit_user_registration_path) %>">
+            <%= link_to current_user.username, edit_user_registration_path %>              
+          </li>
+          <li class="<%= active?(dashboard_path) %>"><%= link_to 'Dashboard', dashboard_path %></li>
           <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li class="<%= active?(new_user_session_path) %>"><%= link_to 'Login', new_user_session_path %></li>
