--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -15,9 +15,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="<%= active?(root_path) %>">
-					<%= link_to root_path do %>
-						Home <span class="sr-only">(current)</span>
-					<% end %>
+          <% if user_signed_in? %>
+            <%= link_to 'Dashboard', root_path %>
+          <% else %>
+            <%= link_to 'Home', root_path %>
+          <% end %>
         </li>
         <li class="<%= active?(about_path) %>"><%= link_to 'About', about_path %></li>
         <li class="<%= active?(contact_path) %>"><%= link_to 'Contact', contact_path %></li>
@@ -27,7 +29,6 @@
           <li class="<%= active?(edit_user_registration_path) %>">
             <%= link_to current_user.username, edit_user_registration_path %>              
           </li>
-          <li class="<%= active?(dashboard_path) %>"><%= link_to 'Dashboard', dashboard_path %></li>
           <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li class="<%= active?(new_user_session_path) %>"><%= link_to 'Login', new_user_session_path %></li>
