--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -23,6 +23,7 @@
         </li>
         <li class="<%= active?(about_path) %>"><%= link_to 'About', about_path %></li>
         <li class="<%= active?(contact_path) %>"><%= link_to 'Contact', contact_path %></li>
+        <li class="<%= active?(field_offices_path) %>"><%= link_to 'Field Offices', field_offices_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
