--- a/app/views/n400_forms/_form.html.erb
+++ b/app/views/n400_forms/_form.html.erb
@@ -1,12 +1,20 @@
 
-<%= simple_form_for(@n400_form) do |f| %>
+<%= simple_form_for(@n400_form, html: { id: 'SignupForm' }) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-	<%= render 'step1', f: f %>
+	<fieldsets>
+		<legend> Information About Your Eligibility</legend>
+		<%= render 'step1', f: f %>
+	</fieldsets>
+
+	<fieldsets>
+		<legend> Information About You</legend>
+		<%= render 'step2', f: f %>
+	</fieldsets>
 
   <div class="form-actions">
-    <%= f.button :submit, class: 'btn btn-primary' %>
+    <%= f.button :submit, id: 'SaveAccount', class: 'btn btn-primary btn-lg' %>
   </div>
 <% end %>
 
