--- a/app/views/n400_forms/_form.html.erb
+++ b/app/views/n400_forms/_form.html.erb
@@ -13,6 +13,11 @@
 		<%=  render 'step2', f: f %>
 	</fieldsets>
 
+	<fieldsets>
+		<legend> Accommodations for Individuals With Disabilities and/or Impairments</legend>
+		<%=  render 'step3', f: f %>
+	</fieldsets>
+
   <div class="form-actions">
     <%= f.button :submit, id: 'SaveAccount', class: 'btn btn-primary btn-lg' %>
   </div>
