--- a/app/views/n400_forms/_form.html.erb
+++ b/app/views/n400_forms/_form.html.erb
@@ -18,6 +18,11 @@
 		<%=  render 'step3', f: f %>
 	</fieldsets>
 
+	<fieldsets>
+		<legend> Information to Contact You</legend>
+		<%=  render 'step4', f: f %>
+	</fieldsets>
+
   <div class="form-actions">
     <%= f.button :submit, id: 'SaveAccount', class: 'btn btn-primary btn-lg' %>
   </div>
