--- a/app/views/n400_forms/_form.html.erb
+++ b/app/views/n400_forms/_form.html.erb
@@ -23,6 +23,11 @@
 		<%=  render 'step4', f: f %>
 	</fieldsets>
 
+	<fieldsets>
+		<legend> Information About Your Residence</legend>
+		<%=  render 'step5', f: f %>
+	</fieldsets>
+
   <div class="form-actions">
     <%= f.button :submit, id: 'SaveAccount', class: 'btn btn-primary btn-lg' %>
   </div>
