Updated form fields with json serialize

--- a/app/views/n400_forms/_step2.html.erb
+++ b/app/views/n400_forms/_step2.html.erb
@@ -18,7 +18,7 @@
 </div>
 
 <p>4. Name Change (Optional)</p>
-<%= f.input :name_change, as: :radio_buttons, collection: [['0', 'Yes'], ['1', 'No']], label_method: :second, value_method: :first %>
+<%= f.input :name_change, as: :radio_buttons, collection: N400Form::YES_OR_NO %>
 <div id="name-change-fields">
 	<%= f.input :new_last_name %>
 	<%= f.input :new_first_name %>
@@ -27,20 +27,20 @@
 
 <%= f.input :social_security_num %>
 <%= f.input :uscis_num %>
-<%= f.input :gender, as: :radio_buttons, collection: [['0', 'Female'], ['1', 'Male']], label_method: :second, value_method: :first %>
+<%= f.input :gender, as: :radio_buttons, collection: N400Form::GENDER %>
 <%= f.input :date_of_birth, start_year: Date.today.year - 100,
                               end_year: Date.today.year %>
 <%= f.input :date_of_residency, start_year: Date.today.year - 40,
                               end_year: Date.today.year %>
+
 <p>Country of Birth</p>
 <%= f.country_select :country_of_birth,  
 	include_blank: "Please select a Country" %>
 <p>Country of Citizenship or Nationality</p>
 <%= f.country_select :country_of_citizendship,  
 	include_blank: "Please select a Country" %>
-<%= f.input :physical_disability, as: :radio_buttons, collection: [['0', 'Yes'], ['1', 'No']], label_method: :second, value_method: :first %>
+<%= f.input :physical_disability, as: :radio_buttons, collection: N400Form::YES_OR_NO %>
 <p>If you answered "Yes," submit a completed Form N-648, Medical Certification for Disability Exceptions, when you file your Form N-400.</p>
-<%= f.input :years_or_older_50, as: :radio_buttons, collection: [['0', 'Yes'], ['1', 'No']], label_method: :second, value_method: :first %>
-<%= f.input :years_or_older_55, as: :radio_buttons, collection: [['0', 'Yes'], ['1', 'No']], label_method: :second, value_method: :first %>
-<%= f.input :years_or_older_65, as: :radio_buttons, collection: [['0', 'Yes'], ['1', 'No']], label_method: :second, value_method: :first %>
-
+<%= f.input :years_or_older_50, as: :radio_buttons, collection: N400Form::YES_OR_NO %>
+<%= f.input :years_or_older_55, as: :radio_buttons, collection: N400Form::YES_OR_NO %>
+<%= f.input :years_or_older_65, as: :radio_buttons, collection: N400Form::YES_OR_NO %>
