--- a/app/views/n400_forms/_form.html.erb
+++ b/app/views/n400_forms/_form.html.erb
@@ -11,26 +11,26 @@
 
 		<fieldsets>
 			<header>Information About You</header>
-			<%#=  render 'step2', f: f %>
+			<%=  render 'step2', f: f %>
 		</fieldsets>
 
 		<fieldsets>
 			<header>Accommodations for Individuals With Disabilities and/or Impairments</header>
-			<%#=  render 'step3', f: f %>
+			<%=  render 'step3', f: f %>
 		</fieldsets>
 
 		<fieldsets>
 			<header>Information to Contact You</header>
-			<%#=  render 'step4', f: f %>
+			<%=  render 'step4', f: f %>
 		</fieldsets>
 
 		<fieldsets>
 			<header>Information About Your Residence</header>
-			<%#=  render 'step5', f: f %>
+			<%=  render 'step5', f: f %>
 		</fieldsets>
 
 	  <div class="form-actions">
-	    <%#= f.button :submit, id: 'SaveAccount', class: 'btn btn-primary btn-lg' %>
+	    <%= f.button :submit, id: 'SaveAccount', class: 'btn btn-primary btn-lg' %>
 	  </div>
 	
 <% end %>
