--- a/app/views/n400_forms/_step1.html.erb
+++ b/app/views/n400_forms/_step1.html.erb
@@ -1,28 +1,13 @@
 
-<%= f.text_field :nine_digit_a_number %>
+<%= f.input :nine_digit_a_number, placeholder: '123456789' %>
 
-<%= f.input :eligibility, as: :radio_buttons, collection: 
-	[
-		['0', 'Have been a lawful permanent resident of the United States for at least 5 years.'], 
-		['1', 'Have been a lawful permanent resident of the United States for at least 3 years. In addition, you have been married to and living with the same U.S. citizen spouse for the last 3 years, and your spouse has been a U.S. citizen for the last 3 years at the time you filed your Form N-400.'], 
-		['2', 'Are a lawful permanent resident of the United States and you are the spouse of a U.S. citizen and your U.S. citizen spouse is regularly engaged in specified employment abroad. (See the Immigration and Nationality Act (INA) section 319(b).) If your residential address is outside the United States and you are filing under Section 319(b), select the USCIS Field Office from the list below where you would like to have your naturalization interview:'], 
-		['3', 'Are applying on the basis of qualifying military service.'], 
-		['4', 'Other (Explain):']
-	], 
-	label_method: :second, value_method: :first, wrapper_html: { id: 'eligibile' } %>
+<%= f.input :eligibility, as: :radio_buttons, collection: N400Form::ELIGIBILITY, wrapper_html: { id: 'eligibile' } %>
 
 <%= f.input :field_office_id, collection: FieldOffice.all, 
 	label_method: :state_and_name, value_method: :id,label: "Field Office", 
 	include_blank: "Please select a Field Office", selected: @n400_form.field_office_id, wrapper_html: { id: 'field-office' } %>
 
-<%= f.input :other_explain, collection: [
-	['0', 'RELIGIOUS DUTIES'],
-	['1', 'EMPLOYMENT ABROAD - MEDIA ORGANIZATION'],
-	['2', 'SURVIVING SPOUSE OF MILITARY US CITIZEN'],
-	['3', 'NON U.S. CITIZEN NATIONALS RESIDING IN OUTLYING POSSESSIONS'],
-	['4', 'SERVICE ON U.S. VESSEL']
-],
-	label_method: :second, value_method: :first, 
+<%= f.input :other_explain, collection: N400Form::OTHER_EXPLAIN, 
 	include_blank: "Please select an explanation",
 	wrapper_html: { id: 'other-explain' }
  %>	
