--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <!--=== Content Part ===-->
 <div class="container content">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+  <div class="row justify-content-md-center">
+    <div class="col col-lg-6">
       <!-- <form class="reg-page"> -->
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <div class="reg-header">
