--- a/app/views/n400_forms/_step4.html.erb
+++ b/app/views/n400_forms/_step4.html.erb
@@ -1,14 +1,14 @@
-<p>1. Daytime Telephone Number</p>
+<h6>1. Daytime Telephone Number</h6>
 <%= f.input :phone_day, label: false  %>
 
-<p>2. Work Telephone Number (if any)</p>
+<h6>2. Work Telephone Number (if any)</h6>
 <%= f.input :phone_work, label: false  %>
 
-<p>3. Evening Telephone Number</p>
+<h6>3. Evening Telephone Number</h6>
 <%= f.input :phone_evening, label: false  %>
 
-<p>4. Mobile Telephone Number (if any)</p>
+<h6>4. Mobile Telephone Number (if any)</h6>
 <%= f.input :phone_mobile, label: false  %>
 
-<p>5. Email Address (if any)</p>
+<h6>5. Email Address (if any)</h6>
 <%= f.input :email_address, label: false  %>
