--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome</h1>
-<p><%= link_to 'New N400 form', new_n400_form_path %></p>
+<div class="container">
+  <h1>Welcome</h1>
+  <p><%= link_to 'New N400 form', new_n400_form_path %></p>
+    
+</div>
