--- a/app/views/n400_forms/_step5.html.erb
+++ b/app/views/n400_forms/_step5.html.erb
@@ -1,51 +1,49 @@
+<h6>1. Where have you lived during the last five years? Provide your most recent residence and then list every location where you have lived during the last five years. If you need extra space, use additional sheets of paper.</h6>
 <p>A. Current Physical Address</p>
 
-<%= f.input :physical_address_street_1 %>
-<%= f.input :physical_address_street_2 %>	
+<%= f.input :physical_address_street_1, label: 'Street Number and Name' %>
+<%= f.input :physical_address_street_2, label: 'Apt/Ste/Flr Number' %>	
 
+<%= f.input :physical_address_city, label: 'City or Town' %>
+<%= f.input :physical_address_county, label: 'County' %>
+<%= f.input :physical_address_state, label: 'State' %>
+<%= f.input :physical_address_zip, label: 'Zip Code' %>
+<%= f.input :physical_address__plus_4, label: 'Zip Code + 4' %>
 
+<%= f.input :physical_address_province, label: 'Province or Region (foreign address only)' %>
+<%= f.input :physical_address_postal, label: 'Postal Code
+(foreign address only)' %>
 
-<%= f.input :physical_address_city %>
-<%= f.input :physical_address_county %>
-
-<%= f.input :physical_address_state %>
-
-<%= f.input :physical_address_zip %>
-
-<%= f.input :physical_address__plus_4 %>
-
-
-
-<%= f.input :physical_address_province %>
-<%= f.input :physical_address_postal %>
-
-	<%= f.country_select :physical_address_country,  
-	include_blank: "Please select a Country" %>
-
-
-
+<%= f.input :physical_address_country,  
+	include_blank: "Please select a Country", label: 'Country (foreign address only)' %>
 
 <%= f.input :physical_address_date_from, start_year: Date.today.year - 100,
-                              end_year: Date.today.year %>
+                              end_year: Date.today.year, label: 'Dates of Residence: From' %>
 <%= f.input :physical_address_date_to, start_year: Date.today.year - 10,
-                              end_year: Date.today.year %>
+                              end_year: Date.today.year, label: 'Dates of Residence: To' %>
 
 <hr>
 
 <p>B. Current Mailing Address (if different from the address above)</p>
 <%= f.input :mailing_physical_address, label: "Same as physical address", input_html: { class: 'physical-address'} %>
+
 <fieldset id="address-fieldset">	
-	<%= f.input :mailing_address_street_1 %>
-	<%= f.input :mailing_address_street_2 %>
-	<%= f.input :mailing_address_city %>
-	<%= f.input :mailing_address_county %>
-	<%= f.input :mailing_address_state %>
-	<%= f.input :mailing_address_zip %>
-	<%= f.input :mailing_address__plus_4 %>
-	<%= f.input :mailing_address_province %>
-	<%= f.input :mailing_address_postal %>
-	<%= f.country_select :mailing_address_country,  
-		include_blank: "Please select a Country" %>
+	<%= f.input :mailing_address_street_1, label: 'Street Number and Name' %>
+	<%= f.input :mailing_address_street_2, label: 'Apt/Ste/Flr Number' %>
+
+	<%= f.input :mailing_address_city, label: 'City or Town' %>
+	<%= f.input :mailing_address_county, label: 'County' %>
+	<%= f.input :mailing_address_state, label: 'State' %>
+	<%= f.input :mailing_address_zip, label: 'Zip Code' %>
+	<%= f.input :mailing_address__plus_4, label: 'Zip Code + 4' %>
+
+	<%= f.input :mailing_address_province, label: 'Province or Region (foreign address only)' %>
+	<%= f.input :mailing_address_postal, label: 'Postal Code
+(foreign address only)' %>
+
+	<%= f.input :mailing_address_country,  
+		include_blank: "Please select a Country", label: 'Country (foreign address only)' %>
+		
 	<%= f.input :mailing_address_date_from, start_year: Date.today.year - 100,
 	                              end_year: Date.today.year %>
 	<%= f.input :mailing_address_date_to, start_year: Date.today.year - 10,
