--- a/app/views/n400_forms/index.html.erb
+++ b/app/views/n400_forms/index.html.erb
@@ -1,27 +1,30 @@
-<h1>N400 Forms</h1>
+<div class="container">
+  <h1>N400 Forms</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>A-Number</th>
-      <th>Eligigility</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @n400_forms.each do |n400_form| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= n400_form.nine_digit_a_number %></td>
-        <td><%= n400_form.eligibility %></td>
-        <td><%= link_to 'Show', n400_form %></td>
-        <td><%= link_to 'Edit', edit_n400_form_path(n400_form) %></td>
-        <td><%= link_to 'Destroy', n400_form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>A-Number</th>
+        <th>Eligigility</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @n400_forms.each do |n400_form| %>
+        <tr>
+          <td><%= n400_form.nine_digit_a_number %></td>
+          <td><%= n400_form.eligibility %></td>
+          <td><%= link_to 'Show', n400_form %></td>
+          <td><%= link_to 'Edit', edit_n400_form_path(n400_form) %></td>
+          <td><%= link_to 'Destroy', n400_form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New N400 Form', new_n400_form_path %>
+  <br>
+
+  <%= link_to 'New N400 Form', new_n400_form_path %>
+  
+</div>
