--- a/app/views/n400_forms/new.html.erb
+++ b/app/views/n400_forms/new.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
 	
-<h1>New N400 Form</h1>
+  <div class="my-form">
+    <h1>New N400 Form</h1>
 
-<%= render 'form', n400_form: @n400_form %>
+    <%= render 'form', n400_form: @n400_form %>
 
-<%= link_to 'Back', n400_forms_path %>
+    <%= link_to 'Cancel', n400_forms_path, class: 'btn btn-info' %>  
+  </div>
 </div>
