--- a/app/views/n400_forms/show.html.erb
+++ b/app/views/n400_forms/show.html.erb
@@ -1,11 +1,16 @@
-<p>
-	<strong>A Number</strong>
-	<%= @n400_form.nine_digit_a_number %>
-</p>
-<p>
-  <strong>Eligitility:</strong>
-  <%= @n400_form.eligibility %>
-</p>
+<div class="container">
 
-<%= link_to 'Edit', edit_n400_form_path(@n400_form) %> |
-<%= link_to 'Back', n400_forms_path %>
+  <p>
+    <strong>A Number</strong>
+    <%= @n400_form.nine_digit_a_number %>
+  </p>
+  <p>
+    <strong>Eligitility:</strong>
+    <%= @n400_form.eligibility %>
+  </p>
+
+  <%= link_to 'Edit', edit_n400_form_path(@n400_form) %> |
+  <%= link_to 'Back', n400_forms_path %>
+  
+
+</div>
