--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,53 +1,38 @@
-<!--=== Header v8 ===-->
-<div class="header-v8 header-sticky">
 
-  <!-- Navbar -->
-  <div class="navbar mega-menu" role="navigation">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="res-container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">    
+    <div class="navbar-brand">
+      <%= link_to root_path do %>
+        <%= image_tag "logo-default-102x74.png", alt: 'Blue Waters Immigration Logo' %>
+      <% end %>
+    </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="navbar-brand">
-          <%= link_to root_path do %>
-            <%= image_tag "logo-default-102x74.png", alt: 'Blue Waters Immigration Logo' %>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+      <!-- <ul class="nav justify-content-end"> -->
+       <li class="nav-item <%= active?(root_path) %>">
+          <% if user_signed_in? %>
+            <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+          <% else %>
+            <%= link_to 'Home', root_path, class: 'nav-link' %>
           <% end %>
-        </div>
-      </div><!--/end responsive container-->
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse navbar-responsive-collapse">
-        <div class="res-container">
-          <ul class="nav navbar-nav">
-            <li class="<%= active?(root_path) %>">
-              <% if user_signed_in? %>
-                <%= link_to 'Dashboard', root_path %>
-              <% else %>
-                <%= link_to 'Home', root_path %>
-              <% end %>
-            </li>
-            <li class="<%= active?(about_path) %>"><%= link_to 'About', about_path %></li>
-            <li class="<%= active?(contact_path) %>"><%= link_to 'Contact', contact_path %></li>
-            <% if user_signed_in? %>
-            <li class="<%= active?(field_offices_path) %>"><%= link_to 'Field Offices', field_offices_path %></li>  
-              <li class="<%= active?(edit_user_registration_path) %>">
-                <%= link_to current_user.username, edit_user_registration_path %>              
-              </li>
-              <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
-            <% else %>
-              <li class="<%= active?(new_user_session_path) %>"><%= link_to 'Login', new_user_session_path %></li>
-              <li class="<%= active?(new_user_registration_path) %>"><%= link_to 'Sign Up', new_user_registration_path %></li>
-            <% end %>                  
-          </ul>
-        </div><!--/responsive container-->
-      </div><!--/navbar-collapse-->
-    </div><!--/end contaoner-->
+        </li>
+        <li class="nav-item <%= active?(about_path) %>"><%= link_to 'About', about_path, class: 'nav-link' %></li>
+        <li class="nav-item <%= active?(contact_path) %>"><%= link_to 'Contact', contact_path, class: 'nav-link' %></li>
+        <% if user_signed_in? %>
+        <li class="nav-item <%= active?(field_offices_path) %>"><%= link_to 'Field Offices', field_offices_path, class: 'nav-link' %></li>  
+          <li class="nav-item <%= active?(edit_user_registration_path) %>">
+            <%= link_to current_user.username, edit_user_registration_path, class: 'nav-link' %>              
+          </li>
+          <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
+        <% else %>
+          <li class="nav-item <%= active?(new_user_session_path) %>"><%= link_to 'Login', new_user_session_path, class: 'nav-link' %></li>
+          <li class="nav-item <%= active?(new_user_registration_path) %>"><%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %></li>
+        <% end %> 
+      </ul>
+    </div>
   </div>
-  <!-- End Navbar -->
-</div>
-<!--=== End Header v8 ===-->
+</nav>
