Updated the user dashboard to show their forms

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
   <h1>Welcome</h1>
-  <p><%= link_to 'New N400 form', new_n400_form_path %></p>
-    
+  <% if @n400_form %>
+    <%= link_to " #{current_user.username}'s N400 Form", n400_form_path(@n400_form) %>  
+  <% else %>
+    <p><%= link_to "New N400 form", new_n400_form_path %></p>
+  <% end %>
 </div>
