--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -32,6 +32,9 @@
           <li class="nav-item <%= active?(new_user_session_path) %>"><%= link_to 'Login', new_user_session_path, class: 'nav-link' %></li>
           <li class="nav-item <%= active?(new_user_registration_path) %>"><%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %></li>
         <% end %> 
+        <% if logged_in?(:site_admin, :site_manager) %>
+          <li class="nav-item"><%= link_to 'Manager', "#", class: 'nav-link' %></li>
+        <% end %>
       </ul>
     </div>
   </div>
