Updated admin and manager dashboards

--- a/app/assets/stylesheets/admin/application.scss
+++ b/app/assets/stylesheets/admin/application.scss
@@ -3,3 +3,5 @@
 // @import "gritter";
 @import "simple-line-icons";
 @import "font-awesome";
+@import "hs-admin-icons/hs-admin-icons";
+@import "unify-admin";
