--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -25,7 +25,7 @@
         <% if user_signed_in? %>
         <li class="nav-item <%= active?(field_offices_path) %>"><%= link_to 'Field Offices', field_offices_path, class: 'nav-link' %></li>  
           <li class="nav-item <%= active?(edit_user_registration_path) %>">
-            <%= link_to current_user.username, edit_user_registration_path, class: 'nav-link' %>              
+            <%= link_to current_user.username.titleize, edit_user_registration_path, class: 'nav-link' %>              
           </li>
           <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
         <% else %>
