--- a/app/views/admin/dashboard/admin_n400_forms.html.erb
+++ b/app/views/admin/dashboard/admin_n400_forms.html.erb
@@ -9,7 +9,7 @@
 
         <!-- Income Cards -->
         <div class="card g-brd-gray-light-v7 g-mb-30">
-          <div class="js-custom-scroll g-height-500 g-pa-15 g-pa-0-30-25--md">
+          <div class="">
             <table class="table table-responsive-sm w-100">
               <thead>
                 <tr>
@@ -40,5 +40,9 @@
       </div>
       <!-- End Income Card -->
     </div>
+    <div class="row justify-content-md-center">
+      <%= paginate @n400_forms %>
+    </div>    
   </div>
 </div>
+
