--- a/app/views/n400_forms/new.html.erb
+++ b/app/views/n400_forms/new.html.erb
@@ -5,6 +5,6 @@
 
     <%= render 'form', n400_form: @n400_form %>
 
-    <%= link_to 'Cancel', n400_forms_path, class: 'btn btn-info' %>  
+    <%= link_to 'Cancel', dashboard_path, class: 'btn btn-info' %>  
   </div>
 </div>
