--- a/app/assets/stylesheets/admin/unify-admin.css
+++ b/app/assets/stylesheets/admin/unify-admin.css
@@ -2213,9 +2213,9 @@ hr {
 @media all and (max-width: 992px - 1) {
   .navbar-expand-lg > .container,
   .navbar-expand-lg > .container-fluid {
-    -webkit-box-pack: start;
+/*    -webkit-box-pack: start;
         -ms-flex-pack: start;
-            justify-content: flex-start;
+            justify-content: flex-start;*/
   }
   .navbar-expand-lg .navbar-collapse {
     width: 100%;
