--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,9 +1,45 @@
-<div class="container">
-  <h1>Welcome</h1>
-  <% if @n400_form %>
-    <%= link_to " #{current_user.username}'s N400 Form", n400_form_path(@n400_form) %>  
-    <%= status_label @n400_form.status %>
-  <% else %>
-    <p><%= link_to "New N400 form", new_n400_form_path %></p>
-  <% end %>
+<!--=== Breadcrumbs v3 ===-->
+<div class="breadcrumbs-v3 img-v3 text-center">
+  <div class="container">
+    <h1>All Forms</h1>
+    <p>Application for Naturalization</p>
+  </div><!--/end container-->
 </div>
+<!--=== End Breadcrumbs v3 ===-->
+<!--=== Container Part ===-->
+<div class="container content-sm">
+  <div class="headline-center margin-bottom-60">
+    <h2>List of Forms Needed</h2>
+    <p>Phasellus vitae ipsum ex. Etiam eu vestibulum ante. <br>
+      Lorem ipsum <strong>dolor</strong> sit amet, consectetur adipiscing elit. Morbi libero libero, imperdiet fringilla </p>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6 md-margin-bottom-50">
+      <ul class="list-unstyled lists-v1">
+        <% if @n400_form %>
+          <li><i class="fa fa-angle-right"></i>
+            <%= link_to " #{current_user.username.titleize}'s N400 Form", n400_form_path(@n400_form) %>  
+            <%= status_label @n400_form.status %>
+          </li>
+        <% else %>
+          <li><i class="fa fa-angle-right"></i>
+            <%= link_to "N400 form", new_n400_form_path %>
+          </li>
+        <% end %>        
+        <li><i class="fa fa-angle-right"></i><%= link_to 'N-200K Form', "#" %></li>
+        <li><i class="fa fa-angle-right"></i><%= link_to 'N-500 Form', "#" %></li>
+        <li><i class="fa fa-angle-right"></i><%= link_to 'N-500K Form', "#" %></li>
+      </ul>
+    </div>
+    <div class="col-md-6 md-margin-bottom-50">
+      <ul class="list-unstyled lists-v1">
+        <li><i class="fa fa-angle-right"></i><%= link_to 'N-600 Form', "#" %></li>
+        <li><i class="fa fa-angle-right"></i><%= link_to 'N-600K Form', "#" %></li>
+        <li><i class="fa fa-angle-right"></i><%= link_to 'N-800 Form', "#" %></li>
+        <li><i class="fa fa-angle-right"></i><%= link_to 'N-800K Form', "#" %></li>
+      </ul>
+    </div>
+  </div><!--/end row-->
+</div>
+<!--=== End Container Part ===-->
