--- a/app/views/n400_forms/edit.html.erb
+++ b/app/views/n400_forms/edit.html.erb
@@ -5,5 +5,5 @@
 	<%= render 'form', n400_form: @n400_form %>
 
 	<%= link_to 'Show', @n400_form %> |
-	<%= link_to 'Back', n400_forms_path %>
+	<%= link_to 'Back', :back %>
 </div>
